--- a/App/index.html
+++ b/App/index.html
@@ -43,7 +43,7 @@
 	   		</div>
 	   	</div>
    	</div>
-    <input type="file" id="mdExporter" nwsaveas="untitled.md" nwworkingdir="/Users/" accept=".md" style="display:none" />
+    <input type="file" id="mdExporter" nwsaveas="untitled.md" value="/Users/" nwworkingdir="/Users/" accept=".md" style="display:none" />
     <input type="file" id="mdImporter" style="display:none" />
   </body>
 </html>
