新規作成機能を追加

--- a/App/index.html
+++ b/App/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Simple Markdown</title>
+    <title>untitled</title>
     <link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css">
     <style>
       .container{
@@ -43,7 +43,7 @@
 	   		</div>
 	   	</div>
    	</div>
-    <input type="file" id="mdExporter" nwsaveas="untitled.md" value="/Users/" nwworkingdir="/Users/" accept=".md" style="display:none" />
+    <input type="file" id="mdExporter" nwsaveas="untitled.md" value="" nwworkingdir="/Users/" accept=".md" style="display:none" />
     <input type="file" id="mdImporter" style="display:none" />
   </body>
 </html>
