--- a/App/index.html
+++ b/App/index.html
@@ -25,6 +25,10 @@
         height: 100%;
         border-right: 1px solid #666666;
       }
+      #dist img{
+        max-width: 100%;
+        height: auto;
+      }
     </style>
     <script src="jquery.min.js"></script>
     <script src="./js/bootstrap.min.js"></script>
