--- a/App/index.html
+++ b/App/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>untitled</title>
+    <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css">
     <style>
       .container{
