--- a/App/index.html
+++ b/App/index.html
@@ -5,13 +5,14 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css">
     <style>
-      .container{
+      #container{
         height:100vh;
         overflow-y:hidden;
       }
     	#src{
     		width:100%;
     		height: 100vh;
+        padding: 5px;
     		border:none;
         resize: none;
     	}
@@ -26,9 +27,17 @@
         height: 100%;
         border-right: 1px solid #666666;
       }
+      #dist{
+        word-break:break-all;
+        padding:5px;
+      }
       #dist img{
         max-width: 100%;
         height: auto;
+      }
+      .halfGrid{
+        width:50%;
+        float:left;
       }
     </style>
     <script src="jquery.min.js"></script>
@@ -37,16 +46,14 @@
     <script src="app.js"></script>
   </head>
   <body>
-  	<div class="container">
-	  	<div class="row">
-	  		<div class="col-xs-6 codingArea">
+  	<div id="container">
+	  		<div class="halfGrid codingArea">
 	   			<textarea id="src" tabindex="-1"></textarea>
 	   		</div>
-	   		<div class="col-xs-6">
+	   		<div class="halfGrid">
 			   	<div id="dist">
 			   	</div>   			
 	   		</div>
-	   	</div>
    	</div>
     <input type="file" id="mdExporter" nwsaveas="untitled.md" value="" nwworkingdir="/Users/" accept=".md" style="display:none" />
     <input type="file" id="mdImporter" style="display:none" />
